<resources>
    <string name="app_name">Voice_Counter</string>
    <string name="RESET">RESET</string>
    <string name="ZERO">0</string>
    <string name="Back">뒤로가기</string>
    <string name="Mute">음소거</string>
    <string name="Minus">Minus</string>
    <string name="Plus">Plus</string>
    <string name="PushUpImg">푸시업 이미지</string>
    <string name="PhoneImg">핸드폰 이미지</string>
    <string name="PianoImg">피아노 이미지</string>
    <string name="START">START</string>
    <string name="Help">도움말</string>
    <string name="Description">목소리로 카운트 해 줍니다.</string>
    <string name="Title">Voice Counter</string>
    <string name="HowtoUse">폰 윗면 근접센서 5cm 이내로 \n 가까워지면 카운트 됩니다.</string>
    <string name="HowtoUse2">배꼽 아래쪽 바닥에 놓고 \n 팔굽혀펴기를 하거나</string>
    <string name="HowtoUse3">피아노 연습 하다가 몇 번 쳤는지 \n 기억이 안날 때 사용이 가능합니다.</string>

</resources>