<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCEEE8E8"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/ZERO"
        android:textColor="#99000000"
        android:textSize="120sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetBtn" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:contentDescription="@string/Mute"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/selector_button"
        android:checked="true"
        android:textColor="#B3FFFFFF"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:background="#76C0CA"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/RESET"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7579247174586304/3764239864"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    <ImageView
        android:id="@+id/ivMinusBtn"
        android:contentDescription="@string/Minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/ivPlusBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_count"
        app:srcCompat="@drawable/ic_minus"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivPlusBtn"
        android:contentDescription="@string/Plus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivMinusBtn"
        app:layout_constraintTop_toBottomOf="@+id/tv_count"
        app:srcCompat="@drawable/ic_plus"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivLeft1"
        android:contentDescription="@string/Back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_left" />

</androidx.constraintlayout.widget.ConstraintLayout>