<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCEEE8E8"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="12dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:text="폰 윗면 근접센서 5cm 이내로\n가까워지면 카운트 됩니다."
        android:textAlignment="viewStart"
        android:textColor="#B3000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autoSizeMaxTextSize="14sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_regular"
        android:text="배꼽 아래쪽 바닥에 놓고\n팔굽혀펴기를 하거나"
        android:textColor="#B3000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="48dp"
        android:autoSizeMaxTextSize="14sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_regular"
        android:text="피아노 연습 하다가\n몇 번 쳤는지 기억이 안날 때\n사용이 가능합니다."
        android:textColor="#B3000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:contentDescription="@string/PushUpImg"
        android:layout_width="220dp"
        android:layout_height="141dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_pushup1" />

    <ImageView
        android:id="@+id/imageView5"
        android:contentDescription="@string/PhoneImg"
        android:layout_width="193dp"
        android:layout_height="219dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_phone" />

    <ImageView
        android:id="@+id/ivLeft2"
        android:contentDescription="@string/Back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_left" />

    <ImageView
        android:id="@+id/imageView3"
        android:contentDescription="@string/PianoImg"
        android:layout_width="297dp"
        android:layout_height="177dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_piano" />

</androidx.constraintlayout.widget.ConstraintLayout>